--- a/app/styles/_navBar.scss
+++ b/app/styles/_navBar.scss
@@ -1,25 +1,19 @@
-/* *************************** */
-
-/* NAVBAR                      */
-
-/* *************************** */
-
 .navBarSliderWrapper {
     height: $base-slider-height;
     background: #263238;
     position: fixed;
     bottom: 0px;
-	width: 100%;
-	padding: 0 20px;
-	vertical-align: middle;
+    width: 100%;
+    padding: 0 20px;
+    vertical-align: middle;
     text-align: center;
 }
 
 #sliderValue {
-	font-size: 0.5em;
-	display: inline;
-	color: #ffffff;
-	position: relative;
+    font-size: 0.5em;
+    display: inline;
+    color: #ffffff;
+    position: relative;
 }
 
 .navBarSlider {
@@ -29,50 +23,61 @@
     display: inline-block;
     min-width: 50vw;
     width: 68vw;
-	text-align: initial;
-	.rzslider {
-		margin: auto;
-		.rz-bar {
-			height: 8px;
-			margin-top: -2px;
-		}
-		.rz-selection {
-			background: #607d8b;
-		}
-		.rz-bubble{
-			background: #fff;
-			font-size: 0.85rem;
-			bottom: 10px;
-			border: 1px solid;
-			border-radius: 4px;
-			opacity: 0.8;
-			&.rz-model-value {
-				opacity: 1;
-			}
-		}
-		&[disabled] .rz-bubble {
-			opacity: .8;
-		}
-		.rz-pointer{
-			top: -4px;
-			width: 22px;
-			height: 13px;
-			background-color: #ECEFF1;
-			border: 1px solid;
-			@include set(box-shadow, 0px 0px 4px rgba(0,0,0,.5));
-			outline: none;
-			&:hover {
-				background: #fff;
-			}
-			&:after {
-				content: none;
-			}
-		}
-	}
-	.buttonSlider {
+    text-align: initial;
+
+    .rzslider {
+        margin: auto;
+
+        .rz-bar {
+            height: 8px;
+            margin-top: -2px;
+        }
+
+        .rz-selection {
+            background: #607d8b;
+        }
+
+        .rz-bubble {
+            background: #fff;
+            font-size: 0.85rem;
+            bottom: 10px;
+            border: 1px solid;
+            border-radius: 4px;
+            opacity: 0.8;
+
+            &.rz-model-value {
+                opacity: 1;
+            }
+        }
+
+        &[disabled] .rz-bubble {
+            opacity: .8;
+        }
+
+        .rz-pointer {
+            top: -4px;
+            width: 22px;
+            height: 13px;
+            background-color: #ECEFF1;
+            border: 1px solid;
+            @include set(box-shadow, 0px 0px 4px rgba(0, 0, 0, .5));
+            outline: none;
+
+            &:hover {
+                background: #fff;
+            }
+
+            &:after {
+                content: none;
+            }
+        }
+    }
+
+    .buttonSlider {
         cursor: pointer;
         position: relative;
     }
+
     #left,
     #right {
         background: #bedde0;
@@ -80,6 +85,7 @@
         font-size: 15px;
         top: 3px;
     }
+
     #leftLeft,
     #rightRight {
         background: #bedde0;
@@ -87,6 +93,7 @@
         font-size: 15px;
         top: 3px;
     }
+
     #thumbnails,
     #visColl {
         border-radius: 16px;
