--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,3 @@
-// $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
-// // bower:scss
-// @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-// endbower
-
-@import "susy/sass/_susy.scss";
 @import "variables.scss";
 @import "functions.scss";
 @import "fonts.scss";
@@ -30,31 +24,33 @@ body {
     width: 100%;
     min-width: 800px;
 
-    > header,
-    > footer,
-    > section {
+    >header,
+    >footer,
+    >section {
         @include span(20 of 20);
     }
 
-    > header,
-    > footer {
+    >header,
+    >footer {
         height: 54px;
         padding: 10px;
 
         @include colors($base-color-light, $base-color-dark);
     }
 
-    > header {
+    >header {
         .logo {
             height: 34px;
             float: left;
             margin-right: 1rem;
         }
+
         .webSiteLink {
             color: #f5f5f5;
             font-size: 1.2rem;
             margin-left: 0.4rem;
             opacity: .7;
+
             &:hover {
                 opacity: 1;
                 cursor: pointer;
@@ -80,10 +76,10 @@ footer {
 }
 
 div#global-container-ext.navbar-opened #global-container {
-   @include calc(height, unquote("#{setGlobalFrameHeightWithNavbar()} + 1px"));
+    @include calc(height, unquote("#{setGlobalFrameHeightWithNavbar()} + 1px"));
 }
 
-section > div {
+section>div {
     height: 100%;
     display: block;
     vertical-align: middle;
@@ -96,12 +92,9 @@ section > div {
 #main-container {
     @include main-frame;
     line-height: 22px;
-
-    //@include box-shadow(0px 2px 5px -3px rgba(0, 0, 0, 0.8));
-    // @include set(box-shadow, 0px 2px 5px -3px rgba(0, 0, 0, 0.8));
 }
 
-#main-container > div {
+#main-container>div {
     white-space: nowrap;
 }
 
@@ -139,7 +132,6 @@ section > div {
 @import "collation.scss";
 @import "tei.scss";
 
-// Temporary
 .secondary-container {
     position: absolute;
 }
@@ -245,11 +237,12 @@ section > div {
     height: 54px;
     padding: 10px;
     font-size: 100%;
-    > button-switch {
-       &:first-child {
-          position: relative;
-          top: -1px;
-       }
+
+    >button-switch {
+        &:first-child {
+            position: relative;
+            top: -1px;
+        }
     }
 
     button-switch {
@@ -257,7 +250,7 @@ section > div {
 
         .buttonSwitch {
             height: 0;
-            display: block!important;
+            display: block !important;
             padding: 0 3px;
             background: none;
             box-shadow: none;
@@ -277,7 +270,8 @@ section > div {
                 top: -1px;
             }
 
-            &:hover, &:hover > * {
+            &:hover,
+            &:hover>* {
                 color: $buttonSwitch-active-background-color;
             }
         }
@@ -293,7 +287,8 @@ section > div {
                 width: auto;
                 padding: 0;
 
-                &-active, &:hover {
+                &-active,
+                &:hover {
                     .icon {
                         color: $base-color-active-background;
                     }
@@ -305,7 +300,8 @@ section > div {
                     top: 0;
                 }
 
-                .iconbis-evt_versions, .iconbis-evt_srctxt {
+                .iconbis-evt_versions,
+                .iconbis-evt_srctxt {
                     font-size: .85em;
                     top: -4px;
                 }
@@ -316,9 +312,10 @@ section > div {
             margin-right: 0;
         }
     }
-   .viewModeMenu {
-      display: flex;
-   }
+
+    .viewModeMenu {
+        display: flex;
+    }
 }
 
 .global-loading-container,
@@ -344,13 +341,13 @@ section > div {
 }
 
 .popup-container {
-	@include calc(height, unquote("#{setPopupContainerFrameHeight()}"));
-	overflow-y: auto;
-	position: absolute;
-	width: 100%;
-	left: 0;
-	bottom: $base-slider-height;
-	background-color: #607d8b;
+    @include calc(height, unquote("#{setPopupContainerFrameHeight()}"));
+    overflow-y: auto;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: $base-slider-height;
+    background-color: #607d8b;
     border: 1px solid #FFFFFF;
     border-left: none;
     border-right: none;
@@ -363,7 +360,8 @@ section > div {
     display: block;
 }
 
-.viewMode, .global-loading-container {
+.viewMode,
+.global-loading-container {
     .loading {
         background: rgba(0, 0, 0, 0.1);
 
@@ -413,7 +411,8 @@ pre {
     }
 }
 
-.availableWitnesses-selector, .availableVersions-selector {
+.availableWitnesses-selector,
+.availableVersions-selector {
     position: absolute;
     z-index: 9999;
     display: block;
@@ -430,7 +429,7 @@ pre {
 
     @include set(box-shadow, 0px 0px 4px 0px rgba(0, 0, 0, 0.6));
 
-    > span {
+    >span {
         display: block;
         padding: 10px;
         border-bottom: 1px solid #f0f0f0;
@@ -470,7 +469,7 @@ pre {
         color: #4b4b4b;
 
         li {
-            > span {
+            >span {
                 color: #444444;
                 font-size: 1.1rem;
                 height: 40px;
@@ -497,6 +496,7 @@ pre {
                 color: #ccc;
                 cursor: default;
             }
+
             a {
                 color: #444444;
                 text-decoration: none;
@@ -535,6 +535,7 @@ pre {
         font-variant: small-caps;
         text-align: center;
     }
+
     &-sectionSubHeader {
         display: block;
         border-bottom: 1px dotted #666;
@@ -542,28 +543,35 @@ pre {
         font-variant: small-caps;
         color: #000000;
         font-size: 90%;
-        display:block;
+        display: block;
         margin-top: 14px;
     }
 
-    &-blockLabel, &-inlineLabel {
+    &-blockLabel,
+    &-inlineLabel {
         font-variant: small-caps;
         color: #666;
         font-size: 90%;
     }
+
     &-blockLabel {
         display: block;
         margin-bottom: 2px;
     }
+
     &-inlineLabel {
         display: inline;
-        + .p {
+
+        +.p {
             display: inline;
         }
     }
 }
+
 .p {
-    .projectInfo-inlineLabel { display: none; }
+    .projectInfo-inlineLabel {
+        display: none;
+    }
 }
 
 // Generic style
@@ -574,7 +582,7 @@ pre {
 .noPadding {
     padding: 0 !important;
 
-    > * {
+    >* {
         padding: 0 !important;
     }
 }
@@ -596,7 +604,8 @@ pre {
         opacity: 0.4;
     }
 
-    &.lineSelected, &.lineSelected.lineHover {
+    &.lineSelected,
+    &.lineSelected.lineHover {
         border: 1px solid #4c2f2f !important;
         background-color: #9c4837 !important;
         opacity: 0.5;
@@ -614,13 +623,15 @@ pre {
         }
     }
 
-    .lineHover, .lineHover:after {
+    .lineHover,
+    .lineHover:after {
         cursor: pointer;
         background-color: rgba(230, 206, 160, 0.8) !important;
         color: #000000;
     }
 
-    .lineSelected, .lineSelected:after {
+    .lineSelected,
+    .lineSelected:after {
         cursor: pointer;
         background-color: rgba(213, 177, 125, 0.9) !important;
         color: #000000;
@@ -637,9 +648,10 @@ pre {
 
 .emptyText {
     padding: 0 .4rem;
+
     &::after {
-      content: "\00a0";
-  }
+        content: "\00a0";
+    }
 }
 
 .front [data-type='footer'] {
@@ -647,6 +659,7 @@ pre {
     padding: 10px 0;
     border-top: 1px solid;
 }
+
 /* Critic and Comment Notes (notes with numeric and alphabetical exponent) */
 .icon-evt_note {
    color: #fff;
@@ -674,9 +687,11 @@ evt-popover[data-n=""] .icon-evt_note span.null{
    border-radius: 100px !important;
    background-color: #4e443c;
 }
+
 .popover_trigger.active:hover {
-   opacity: 0.5;
- }
+    opacity: 0.5;
+}
+
 .popover_trigger {
    color: #263238 !important;
    opacity: 10 !important;
@@ -710,14 +725,17 @@ evt-popover[data-n=""] .icon-evt_note span.null{
     padding: 9px 3px;
     margin: 3px;
     cursor: pointer;
+
     img {
         height: 150px;
         width: 100px;
         border: 2px solid black;
     }
+
     &.active img {
         border-color: $base-color-active-background;
     }
+
     figcaption {
         color: white;
         position: relative;
@@ -727,11 +745,14 @@ evt-popover[data-n=""] .icon-evt_note span.null{
         width: 100px;
         text-align: center;
     }
+
     &:hover figcaption {
         background: rgba(0, 0, 0, 0.7) !important;
     }
+
     &.active {
         cursor: default;
+
         figcaption {
             background: rgba($base-color-active-background, .7) !important;
             color: #000;
