--- a/app/styles/_diplomaticEdition.scss
+++ b/app/styles/_diplomaticEdition.scss
@@ -21,8 +21,8 @@
 
       .abbr {
 		 color: purple;
+		 text-decoration: underline;
        z-index: 9;
-
          &:hover,
          &.hover {
             color: #561c0a;
@@ -62,8 +62,8 @@
 			position: relative;
 			border: none;
 			border-radius: 0;
-			margin-top: 0;
-         	padding: 0;
+         margin-top: 0;
+         padding: 0;
 
 			@include set(box-shadow, 0px 0px 0px);
 
@@ -100,7 +100,6 @@
 	}
 
 	// 3.4 Simple Editorial Changes
-
 	// 3.4.2 Regularization and Normalization
 	.choice {
 
@@ -170,7 +169,6 @@
 		.reg, .reg * {
 			background: #e5dac4 !important;
 		}
-
 	// 3.4.3 Additions, Deletions, and Omissions
 	.add {
 		background-color: rgba(0, 128, 0, 0.8);
